Sat Aug 11 22:48:11 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* COPYING: Replaced with GPL 3.
	* All other relevent files: Upgraded to GPL 3.

Fri Aug  3 15:01:38 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* builtin.c (format_tree): Free `obuf' before call to `fatal'
	to keep valgrind happy.

Mon Jun  4 01:12:21 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* All relevant files: Updated copyright year to 2007.

Mon May 28 08:06:15 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* main.c (use_lc_numeric): New variable, true for new
	option `--use-lc-numeric'.
	(optab): Add option "use-lc-numeric".
	(usage): Add to usage message.
	(main): Allow the --use-lc-numeric option to also use the
	local decimal point.

Fri May 18 16:26:00 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* awk.h (_TANDME_SOURCE): Add test for ! _SCO_DS for
	SCO systems.  Thanks to John DuBois <spcecdt@armory.com>

Tue May 15 13:14:04 2007  Arnold D. Robbins  <arnold@skeeve.com>

	General capability suggested by Michael May <mmlpz@t-online.de>.

	* configure.ac: New option --disable-directories-fatal. Makes gawk
	silently skip directories on the command line.
	* io.c (iop_open): Add fourth parameter, pointer to flag which is set
	to true if the file is a directory. In this case, close the fd and
	return NULL.
	(nextfile): Modify call to iop_open. Add logic to check for directory
	and skip if --disable-directories-fatal was used. If the configure flag
	was not used, then if do_traditional also skip.
	(redirect): Modify call to iop_open and call fatal if isdir is true.

Mon May  7 14:51:54 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* POSIX.STD: Updated.

Wed May  2 19:29:56 2007  Stepan Kasal  <kasal@ucw.cz>

	Revert precedence of concatenation and | getline.
	From mail dated 2005-10-31.

	* awkgram.y (common_exp): Move the two rules for naked regexp and
	the rule for "(...) in arr" to ...
	(non_post_simp_exp): ... here ...